DotNetSignalRApp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signalr-app
  labels:
    name: signalr-app
    app: signalr-app
